# whistly-project

./: .dockerignore  .env  .gitignore  Dockerfile  manage.py  populate_birds.py  pyproject.toml
birds/: admin.py  apps.py  forms.py  models.py  utils.py
birds/migrations/: 0001_initial.py
pages/: urls.py  views.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py  0002_alter_customuser_first_name.py
whistly/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
